# Calldock-render

./: .gitignore  CHECKPOINT-2WAY-AUDIO.md  Cargo.toml  DATABASE-INTEGRATION-SUMMARY.md  DEPLOYMENT-GUIDE.md  DEPLOYMENT-PLAN.md  DEPLOYMENT-STRATEGY.md  DEVELOPMENT-ROADMAP.md  Dockerfile.render  Dockerfile.spaceship  ENHANCED-WIDGET-IMPLEMENTATION-SUMMARY.md  FLOATING-WIDGET-ENHANCEMENT-PLAN.md  IMPLEMENTATION_PLAN.md  IVR-IMPLEMENTATION-SUMMARY.md  IVR-SYSTEM-IMPLEMENTATION-SUMMARY.md  PROGRESS-SUMMARY.md  PROJECT_STATUS.md  README-CHECKPOINT.md  README.md  RENDER-DEPLOYMENT-GUIDE.md  SCREEN-SHARING-ANALYSIS.md  VIDEO-FUNCTIONALITY-ANALYSIS.md  WEBSOCKET_README.md  deploy-spaceship.sh  docker-compose.db.yml  docker-compose.manual.yml  docker-compose.simple.yml  docker-compose.working.yml  docker-compose.yml  env.example  env.manual  env.production  package-lock.json  package.json  render.yaml  server.js  setup-render-deployment.md  spaceship.env  spaceship.yaml  start-dev.bat  (+14 more)
backend/auth-service/: API_DOCS.md  Cargo.toml
backend/auth-service/src/: config.rs  database.rs  lib.rs  main.rs  seed.rs  test_auth.rs  test_structure.rs
backend/auth-service/src/handlers/: agents.rs  auth.rs  companies.rs  health.rs  mod.rs  users.rs
backend/auth-service/src/middleware/: auth.rs  mod.rs
backend/auth-service/src/models/: agent.rs  call.rs  company.rs  ivr.rs  mod.rs  routing.rs  user.rs
backend/auth-service/src/repositories/: agent_repository.rs  company_repository.rs  mod.rs  user_repository.rs
backend/auth-service/src/services/: agent_service.rs  auth_service.rs  company_service.rs  mod.rs  user_service.rs
backend/auth-service/src/utils/: mod.rs
backend/call-service/: Cargo.toml  README.md
backend/call-service/src/: config.rs  main.rs  test_webrtc.rs  webrtc.rs  websocket.rs
backend/call-service/src/handlers/: calls.rs  health.rs  mod.rs  webrtc.rs  websocket.rs
backend/call-service/src/services/: call_routing_service.rs  call_service.rs  mod.rs  webrtc_service.rs
database/: README.md  config.js  init.sql  ivr-schema.sql  schema.sql
database/models/: Call.js  Company.js  IvrFlow.js  User.js
deployment-scripts/: load-test.yml  security-scan.sh  setup-production.bat  setup-production.sh  setup-render.bat  setup-render.sh
docker/auth-service/: Dockerfile
docker/call-service/: Dockerfile
frontend/: ADMIN_DASHBOARD_README.md  AGENT_DASHBOARD_README.md  README.md  admin-analytics.html  admin-companies.html  admin-dashboard.html  admin-login.html  admin-users.html  agent-dashboard-working-audio.html  agent-dashboard.html  company-registration.html  index-working-audio.html  index.html  ivr-dashboard.html  ivr-experience.html  package-lock.json  package.json  webrtc-demo.html  webrtc-signaling-server.js  widget-preview.html  widget-test.html
frontend/css/: admin-styles.css  tailwind-output.css  tailwind.css  widget-styles.css
frontend/js/: admin-dashboard-integrated.js  admin-dashboard.js  audio-fix.js  ivr-dashboard.js  ivr-experience.js  websocket-client.js  widget-enhancements.js  widget.js
middleware/: auth.js  validation.js
migrations/: 001_initial_schema.sql  002_company_registration_system.sql
routes/: admin.js  agents.js  analytics.js  auth.js  calls.js  companies.js  company-registrations.js  ivr.js  settings.js  users.js  webhooks.js
scripts/: create-admin-password.js  create-admin-user.js  init-database.js  setup-cloud-dev.bat  setup-database.bat  setup-database.sh  setup-local-dev.bat  start-dev.bat  start-dev.sh
services/: auth-service.js  company-creation-service.js  content-upload-service.js  ivr-service.js  widget-ivr-integration.js
shared/: Cargo.toml
shared/src/: auth.rs  call.rs  company.rs  error.rs  ivr.rs  lib.rs  routing.rs  types.rs
