[workspace]
resolver = "2"
members = [
    "backend/auth-service",
    "backend/call-service",
    "shared",
]

[workspace.dependencies]
# Web framework
actix-web = "4.4"
actix-rt = "2.9"
actix-cors = "0.6"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures-util = "0.3"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.23", features = ["tokio-comp"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "9.2"
bcrypt = "0.15"
uuid = { version = "1.6", features = ["v4", "serde"] }

# WebRTC
webrtc = "0.9"
webrtc-rs = "0.1"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
dotenv = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Validation
validator = { version = "0.16", features = ["derive"] }

# CORS (already defined above)

# Multipart
actix-multipart = "0.6"

# Static files
actix-files = "0.6"

# WebSocket
actix-web-actors = "4.2"
actix = "0.13"

# Metrics
prometheus = "0.13"
actix-web-prom = "0.6"

# Health checks
health = "0.2"

# Testing
mockall = "0.12"
testcontainers = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
