[package]
name = "call-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
shared = { path = "../../shared" }

# Web framework
actix-web = { workspace = true }
actix-rt = { workspace = true }
actix-cors = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Database
sqlx = { workspace = true }
redis = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# WebRTC
webrtc = "0.9"

# WebSocket
actix-web-actors = "4.2"
actix = "0.13"

# HTTP client
reqwest = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Configuration
config = { workspace = true }
dotenv = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Time
chrono = { workspace = true }

# Validation
validator = { workspace = true }

# Metrics
prometheus = { workspace = true }
actix-web-prom = { workspace = true }

# UUID
uuid = { workspace = true }

# Testing
mockall = { workspace = true }
